# rusticity

./: .env.example  Cargo.toml  LICENSE  README.md
src/: main.rs
src/system/: routes.rs
src/system/routes/: index.rs
