[package]
name = "rusticity"
version = "0.1.0"
authors = ["Yagi <koruten@gmail.com>"]
edition = "2018"

[dependencies]
actix-web   = "3.3.2"
sqlx        = { version = "0.4.2", features = [ "mysql", "runtime-actix-rustls" ] }
dotenv      = "0.15.0"
anyhow      = "1.0.38"
listenfd    = "0.3.3"
serde       = "1.0.123"
serde_json  = "1.0.51"
log         = "0.4.8"
env_logger  = "0.8.3"